# semantics-in-coq

./: Makefile  Makefile.coq.conf  README.md  _CoqProject  coq-semantics.opam  dune-project
theories/Semantics/FOL/: Semantics.v  Syntax.v
theories/Semantics/IMP/: Algebraic.v  Axiomatic.v  AxiomaticCompleteness.v  BigStep.v  Denotational.v  Eval.v  GoedelBeta.v  SmallStep.v  State.v  Syntax.v
theories/Semantics/LAMBDA/: Church.v
theories/Semantics/PROLOG/: Semantics.v  Syntax.v
theories/Semantics/Utils/: GoedelBeta.v  SetsExtras.v
